--- a/references.bib
+++ b/references.bib
@@ -948,3 +948,17 @@ PMCID: PMC1060882}
 	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/sim.2681},
 	langid = {en}
 }
+
+@article{braga2001,
+	title = {The Lag Structure Between Particulate Air Pollution and Respiratory and Cardiovascular Deaths in 10 US Cities},
+	author = {Braga, {Alfésio Luís Ferreira} and Zanobetti, Antonella and Schwartz, Joel},
+	year = {2001},
+	month = {11},
+	date = {2001-11},
+	journal = {Journal of Occupational and Environmental Medicine},
+	pages = {927},
+	volume = {43},
+	number = {11},
+	url = {https://journals.lww.com/joem/fulltext/2001/11000/the_lag_structure_between_particulate_air.1.aspx},
+	langid = {canadian}
+}
